--- a/test.yaml
+++ b/test.yaml
@@ -24,7 +24,9 @@
         3A: 8,
         3B: 6,
         3C: 4,
-        3a: 8
+        3a: 8,
+        miss: 0
+        
     },
   metadata: 2
 }
